[tool.poetry]
name = "yotse"
version = "1.0.0"
description = "Your Optimization Tool for Scientific Experiments"
authors = ["dmark04 <dmark04@web.de>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["science", "optimization", "genetic", "algorithm", "gradient", "experiment"]
repository = "https://github.com/SURFQuantum/yotse"
documentation = "https://surfquantum.github.io/yotse/"
classifiers=[
        "Development Status :: 4 - Beta",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Topic :: Scientific/Engineering",
    ]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.0.0"
pygad = ">=3.0.0, <3.1.0"
ruamel-yaml = "^0.17.40"
scipy = "^1.11.4"
bayesian-optimization = "^1.4.3"
qcg-pilotjob = "^0.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

#
#[tool.poetry.group.nlblueprint.dependencies]
#nlblueprint = {git = "https://gitlab.com/d.maier/simulation-code-for-requirements-for-a-processing-node-quantum-repeater-on-a-real-world-fiber-grid"}

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"
sphinxcontrib-mermaid = "^0.9.2"

[tool.poetry.scripts]
tests = "tests.run_tests:main"
examples = "examples.run_examples:run_examples"
blueprint = "examples.run_examples:run_blueprint_example"
show-cov = "tests.run_tests:open_coverage_report"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
